fix modal dialog spacing

--- a/galeria-ilustracoes/style.css
+++ b/galeria-ilustracoes/style.css
@@ -35,16 +35,16 @@ body {
 
 .large-image {
     width: 100%;
-    aspect-ratio: 1/1;
-    object-fit: cover;  
+    height: 100%;
+    flex-grow: 1;
+    object-fit: contain;
 }
 
-.modal-dialog {
-    width: 80vw;
-    height: 60vh;
+.modal-dialog {     
+    width: 90vw;
+    max-height: 60vh;
     border-radius: 10px;
     margin: auto;
-    display: flex;
     align-items: center;
 }
 
@@ -61,25 +61,25 @@ body {
 }
 
 .modal-body {
+    flex: 0 0 content;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    padding-bottom: 10px;
-}
-
-.modal-body img {
-    width: 100%;
-    height: auto;
-    flex-grow: 1;
-    object-fit: contain;
+    padding-bottom: 16px;
 }
 
 .modal-text {
-    padding: 16px;
+    flex: 0 0 content;
+    padding: 8px 16px 16px;
+    width: 100%;
+    border-top: thick solid black;
+}
+
+.modal-footer {
+    flex: 0 0 content;  
+    text-align: center;
+    border: none;
+    justify-content: center;
     width: 100%;
 }
 
@@ -96,7 +96,7 @@ body {
 .modal-text .description > a {
     color: black;
     text-decoration: none;
-}   
+}
 
 .modal-text .author {
     font-family: 'Montserrat', sans-serif;
@@ -112,13 +112,6 @@ body {
 .modal-text .date > a {
     color: gray;
     text-decoration: none;
-}   
-
-.modal-footer {
-    text-align: center;
-    border-top: none;
-    justify-content: center;
-    width: 100%;
 }
 
 .modal-footer .btn {
